fix: delete hover card page Home version mobile

--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -198,15 +198,17 @@ section {
   background-color: transparent;
   cursor: pointer;
 }
-.card .body__heart:hover .heart__empty {
-  opacity: 0;
-}
-.card .body__heart:hover .heart__full {
-  opacity: 1;
-  background: var(--heart-gradient);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
+@media only screen and (min-width: 992px) {
+  .card .body__heart:hover .heart__empty {
+    opacity: 0;
+  }
+  .card .body__heart:hover .heart__full {
+    opacity: 1;
+    background: var(--heart-gradient);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+  }
 }
 .card .content__title {
   font-size: 1.8rem;
